Unfinished work on Sell screen!
- Now have support to fetch image from gallery/files and capture photo using camera

- Need to store sell data into firebase

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,12 @@
     <style name="ProgressBar" parent="Theme.URGo">
         <item name="colorAccent">@color/cor_roxo</item>
     </style>
+
+    <style name="BottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyleWrapper</item>
+    </style>
 </resources>
